Changed Pages to pages on all references and other name changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "React_Project",
+  "name": "ecomm-react-project",
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
